--- a/app/src/main/res/xml/shortcuts.xml
+++ b/app/src/main/res/xml/shortcuts.xml
@@ -29,9 +29,9 @@
         android:shortcutId="tickets"
         android:enabled="true"
         android:icon="@drawable/app_icon"
-        android:shortcutShortLabel="@string/title_tickets"
-        android:shortcutLongLabel="@string/title_tickets"
-        android:shortcutDisabledMessage="@string/title_tickets">
+        android:shortcutShortLabel="@string/title_coupons"
+        android:shortcutLongLabel="@string/title_coupons"
+        android:shortcutDisabledMessage="@string/title_coupons">
         <intent
             android:action="com.ebusiness.discoverlocalzz.SHOW_TICKETS"
             android:targetPackage="com.ebusiness.discoverlocalzz"
