--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -125,25 +125,26 @@
     </androidx.core.widget.NestedScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/share"
+        android:id="@+id/add_review"
         style="?attr/floatingActionButtonSecondaryStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@id/buy"
+        android:layout_above="@id/share"
         android:layout_alignParentEnd="true"
         android:layout_marginHorizontal="@dimen/full_padding"
-        android:contentDescription="@string/share"
-        app:srcCompat="@drawable/ic_share" />
+        android:contentDescription="@string/title_event"
+        app:srcCompat="@drawable/ic_add" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/buy"
+        android:id="@+id/share"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_margin="@dimen/full_padding"
-        android:contentDescription="@string/title_booking"
-        app:srcCompat="@drawable/ic_add_shopping_cart" />
+        android:contentDescription="@string/share"
+        android:visibility="visible"
+        app:srcCompat="@drawable/ic_share" />
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
