--- a/app/src/main/res/layout/list_item_event.xml
+++ b/app/src/main/res/layout/list_item_event.xml
@@ -84,7 +84,7 @@
         <TextView
             android:id="@+id/summary"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginBottom="@dimen/full_padding"
             android:textAppearance="@style/TextAppearance.Material3.BodySmall"
             android:textColor="@android:color/white"
