--- a/app/src/main/res/layout/fragment_tickets.xml
+++ b/app/src/main/res/layout/fragment_tickets.xml
@@ -27,7 +27,7 @@
             android:text="@string/title"/>
 
         <com.google.android.material.chip.Chip
-            android:id="@+id/price_filter"
+            android:id="@+id/coupon_filter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/half_padding"
