--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="Theme.DiscoverLocalzz" parent="android:Theme.Material.Light.NoActionBar" />
+  <!-- Base application theme. -->
+    <style name="Base.Theme.Material3.DayNight" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Customize your light theme here. -->
+        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    </style>
+
+    <style name="Theme.Material3.DayNight" parent="Base.Theme.Material3.DayNight" />
 </resources>
