--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,7 +12,7 @@
         android:title="@string/title_map" />
 
     <item
-        android:id="@+id/navigation_tickets"
+        android:id="@+id/navigation_coupons"
         android:icon="@drawable/ic_local_activity"
         android:title="@string/title_coupons" />
 </menu>
