--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -17,8 +17,8 @@
         tools:layout="@layout/fragment_map" />
 
     <fragment
-        android:id="@+id/navigation_tickets"
-        android:name="com.ebusiness.discoverlocalzz.fragments.TicketsFragment"
+        android:id="@+id/navigation_coupons"
+        android:name="com.ebusiness.discoverlocalzz.fragments.CouponsFragment"
         android:label="@string/title_coupons"
-        tools:layout="@layout/fragment_tickets" />
+        tools:layout="@layout/fragment_coupons" />
 </navigation>
