--- a/app/src/main/res/layout/dialog_add_location.xml
+++ b/app/src/main/res/layout/dialog_add_location.xml
@@ -25,4 +25,32 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPostalAddress" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/cancel_button"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@android:color/transparent"
+            android:text="@string/cancel"
+            android:textAllCaps="false"
+            android:textColor="#000000" />
+
+        <Button
+            android:id="@+id/add_button"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@android:color/transparent"
+            android:text="Hinzufügen"
+            android:textAllCaps="false"
+            android:textColor="#000000" />
+    </LinearLayout>
 </LinearLayout>
