--- a/app/src/main/res/layout/dialog_review.xml
+++ b/app/src/main/res/layout/dialog_review.xml
@@ -36,7 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Feedback für den Veranstalter"
+        android:hint="Bewertung"
         android:inputType="text"
         android:text="" />
 
