--- a/app/src/main/res/layout/dialog_add_location.xml
+++ b/app/src/main/res/layout/dialog_add_location.xml
@@ -96,6 +96,7 @@
                 android:id="@+id/uploaded_image"
                 android:layout_width="154dp"
                 android:layout_height="136dp"
+                tools:ignore="ContentDescription"
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -111,14 +112,16 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_circle_delete" />
+                app:srcCompat="@drawable/ic_circle_delete"
+                tools:ignore="ContentDescription"
+                />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <Button
             android:id="@+id/upload_image_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Foto hochladen" />
+            android:text="@string/photo_upload" />
     </LinearLayout>
 
     <LinearLayout
@@ -126,7 +129,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end"
         android:gravity="left|end"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        tools:ignore="RtlHardcoded">
 
         <Button
             android:id="@+id/cancel_button"
@@ -146,7 +150,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:text="Hinzufügen"
+            android:text="@string/add_location"
             android:textAllCaps="false"
             android:textColor="#000000" />
     </LinearLayout>
