--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -28,7 +29,8 @@
             android:clickable="true"
             android:focusable="true"
             android:paddingStart="@dimen/half_padding"
-            app:srcCompat="@drawable/ic_account_circle" />
+            app:srcCompat="@drawable/ic_account_circle"
+            tools:ignore="RtlSymmetry" />
 
     </LinearLayout>
 
@@ -46,7 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Kategorie" />
+            android:text="@string/filter_category" />
 
         <Button
             android:id="@+id/rating_filter_button"
@@ -54,7 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Bewertung" />
+            android:text="@string/filter_rating" />
 
         <Button
             android:id="@+id/location_filter_button"
@@ -62,7 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Ort"
+            android:text="@string/filter_location"
             android:visibility="invisible" />
     </LinearLayout>
 
